--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
-  html {
-    scroll-behavior: smooth;
-  }
 
-  body {
-    font-family: 'Inter', sans-serif;
+@layer base {
+  html, body {
+    width: 100%;
+    overflow-x: hidden;
   }
 }
 
